@@ -305,6 +305,10 @@ module StringSet :
     val split : elt -> t -> t * bool * t
     val find : elt -> t -> elt
     val find_opt : elt -> t -> elt option
+    val find_first : (elt -> bool) -> t -> elt
+    val find_first_opt : (elt -> bool) -> t -> elt option
+    val find_last : (elt -> bool) -> t -> elt
+    val find_last_opt : (elt -> bool) -> t -> elt option
     val of_list : elt list -> t
   end
 module SSet :
@@ -341,6 +345,10 @@ module SSet :
     val split : elt -> t -> t * bool * t
     val find : elt -> t -> elt
     val find_opt : elt -> t -> elt option
+    val find_first : (elt -> bool) -> t -> elt
+    val find_first_opt : (elt -> bool) -> t -> elt option
+    val find_last : (elt -> bool) -> t -> elt
+    val find_last_opt : (elt -> bool) -> t -> elt option
     val of_list : elt list -> t
   end
 val f : StringSet.t -> SSet.t = <fun>
@@ -409,6 +417,10 @@ module A :
         val split : elt -> t -> t * bool * t
         val find : elt -> t -> elt
         val find_opt : elt -> t -> elt option
+        val find_first : (elt -> bool) -> t -> elt
+        val find_first_opt : (elt -> bool) -> t -> elt option
+        val find_last : (elt -> bool) -> t -> elt
+        val find_last_opt : (elt -> bool) -> t -> elt option
         val of_list : elt list -> t
       end
     val empty : S.t
@@ -517,6 +529,10 @@ module SInt :
     val split : elt -> t -> t * bool * t
     val find : elt -> t -> elt
     val find_opt : elt -> t -> elt option
+    val find_first : (elt -> bool) -> t -> elt
+    val find_first_opt : (elt -> bool) -> t -> elt option
+    val find_last : (elt -> bool) -> t -> elt
+    val find_last_opt : (elt -> bool) -> t -> elt option
     val of_list : elt list -> t
   end
 type (_, _) eq = Eq : ('a, 'a) eq
